--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,8 @@ jobs:
            
             - name: run extract.py
               run: python extract.py
+              working-directory: .
+
     transform-data-job:
         runs-on: ubuntu-latest    
         needs: extract-data-job
@@ -22,6 +24,7 @@ jobs:
 
             - name: run transform.py
               run: python transform.py
+              working-directory: .
     
     load-data-job:
         runs-on: ubuntu-latest    
@@ -32,3 +35,4 @@ jobs:
 
             - name: run load.py
               run: python load.py
+              working-directory: .
