--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
               uses: actions/checkout@v2
            
             - name: run extract.py
-              run: python extract.py
+              run: python .github/workflows/extract.py
               
 
     transform-data-job:
@@ -23,7 +23,7 @@ jobs:
               uses: actions/checkout@v2
 
             - name: run transform.py
-              run: python transform.py
+              run: python .github/workflows/transform.py
               
     
     load-data-job:
@@ -34,5 +34,5 @@ jobs:
               uses: actions/checkout@v2
 
             - name: run load.py
-              run: python load.py
+              run: python .github/workflows/load.py
             
