--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,14 @@ jobs:
         steps:
             - name: checkout code
               uses: actions/checkout@v2
+
+            - name: setup python           
+              uses: actions/setup-python@v6
+              with:
+                python-version: '3.10' 
+                # if you want to change python version , go to github market place and search for
+                # python version
+            
            
             - name: show python version
               run: python --version
