--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,9 @@ jobs:
             - name: show python version
               run: python --version
 
+            - name: install required dependencies
+              run: pip install pandas
+
             - name: run extract.py
               run: python .github/workflows/extract.py
               
