--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
               run: python --version
 
             - name: install required dependencies
-              run: pip install pandas
+              run: pip install -r .github/workflows/requirements.txt
 
             - name: run extract.py
               run: python .github/workflows/extract.py
